# zkfinger_sdk

./: CMakeLists.txt  README.md
include/: libzkfp.h  libzkfperrdef.h  libzkfptype.h  zkinterface.h
src/: sensor_libusb.cpp  zkfinger10.cpp  zkfp.cpp
test/: capture_image.cpp
